# seabird-rs

./: Cargo.toml  README.md  build.rs  flake.nix
src/: block.rs  client.rs  error.rs  lib.rs  proto.rs
