[package]
name = "seabird"
version = "0.2.0-alpha.1"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple client library for the seabird-chat ecosystem"
homepage = "https://github.com/seabird-chat/seabird-rs"
repository = "https://github.com/seabird-chat/seabird-rs"
documentation = "https://docs.rs/seabird"
readme = "README.md"

[features]
default = ["rustfmt"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
anyhow = "1.0"
http = "0.2"
prost = "0.8"
tonic = { version = "0.5", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["prost", "transport"] }

[package.metadata.docs.rs]
# We need to disable rustfmt for docs.rs because it doesn't have rustfmt
# installed, causing the build to fail.
no-default-features = true
