[package]
name = "seabird"
version = "0.3.0-alpha.1"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple client library for the seabird-chat ecosystem"
homepage = "https://github.com/seabird-chat/seabird-rs"
repository = "https://github.com/seabird-chat/seabird-rs"
documentation = "https://docs.rs/seabird"
readme = "README.md"

[dependencies]
anyhow = "1.0"
http = "0.2"
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.8", features = ["tls", "tls-webpki-roots"] }

[build-dependencies]
tonic-build = { version = "0.8" }

[features]
default = ["seabird-client"]
seabird-client = []
chat-ingest-client = []
