[package]
name = "seabird"
version = "0.4.0-alpha.1"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple client library for the seabird-chat ecosystem"
homepage = "https://github.com/seabird-chat/seabird-rs"
repository = "https://github.com/seabird-chat/seabird-rs"
documentation = "https://docs.rs/seabird"
readme = "README.md"

[dependencies]
anyhow = "1.0"
http = "1.4"
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc", "tls-webpki-roots"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[features]
default = ["seabird-client"]
seabird-client = []
chat-ingest-client = []
